error.txt
In file included from order.cpp:3:0:
order.h: In constructor ‘Order::Order(Product&, int, Customer&)’:
order.h:25:51: error: no matching function for call to ‘Customer::setAddress(Address)’
    this->customer.setAddress(customer.getAddress());
                                                   ^
order.h:25:51: note: candidate is:
In file included from order.h:7:0,
                 from order.cpp:3:
customer.h:32:8: note: void Customer::setAddress(Address&)
   void setAddress(Address &address)
        ^
customer.h:32:8: note:   no known conversion for argument 1 from ‘Address’ to ‘Address&’
In file included from order.cpp:3:0:
order.h: In member function ‘void Order::setCustomer(Customer&)’:
order.h:39:51: error: no matching function for call to ‘Customer::setAddress(Address)’
    this->customer.setAddress(customer.getAddress());
                                                   ^
order.h:39:51: note: candidate is:
In file included from order.h:7:0,
                 from order.cpp:3:
customer.h:32:8: note: void Customer::setAddress(Address&)
   void setAddress(Address &address)
        ^
customer.h:32:8: note:   no known conversion for argument 1 from ‘Address’ to ‘Address&’
In file included from assign05.cpp:16:0:
order.h: In constructor ‘Order::Order(Product&, int, Customer&)’:
order.h:25:51: error: no matching function for call to ‘Customer::setAddress(Addre ss)’
    this->customer.setAddress(customer.getAddress());
                                                   ^
order.h:25:51: note: candidate is:
In file included from order.h:7:0,
                 from assign05.cpp:16:
customer.h:32:8: note: void Customer::setAddress(Address&)
   void setAddress(Address &address)
        ^
customer.h:32:8: note:   no known conversion for argument 1 from ‘Address’ to ‘Address&’
In file included from assign05.cpp:16:0:
order.h: In member function ‘void Order::setCustomer(Customer&)’:
order.h:39:51: error: no matching function for call to ‘Customer::setAddress(Address)’
    this->customer.setAddress(customer.getAddress());
                                                   ^
order.h:39:51: note: candidate is:
In file included from order.h:7:0,
                 from assign05.cpp:16:
customer.h:32:8: note: void Customer::setAddress(Address&)
   void setAddress(Address &address)
        ^
customer.h:32:8: note:   no known conversion for argument 1 from ‘Address’ to ‘Address&’
make: *** [a.out] Error 1
